[improve] Better spacing and fix mobile navbar background

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,7 +64,7 @@
             border-radius: 50%;
 
             pointer-events: none;
-            z-index: 100;
+            z-index: 50;
       }
 
       .custom-window-level-shiny-element::after {
@@ -80,5 +80,15 @@
       ::selection {
             background-color: #95f;
             color: #111;
+      }
+
+      ::-webkit-scrollbar {
+            width: 2px;
+            height: 2px;
+            background: #000;
+      }
+
+      ::-webkit-scrollbar-thumb {
+            background: #92f;
       }
 }
